<resources>
    <string name="app_name">ImageViewer</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Err loading images -->
    <string name="input_output_error">Input/Output error</string>
    <string name="image_cant_be_decoded">Image can\'t be decoded</string>
    <string name="downloads_are_denied">Downloads are denied</string>
    <string name="out_of_memory_error">Out Of Memory error</string>
    <string name="unknown_error">Unknown error</string>

    <!-- Image context menu items -->
    <string name="item_add_to_favorite_title">Add to "Favorite"</string>
    <string name="item_del_from_favorite_title">Delete from "Favorite"</string>

    <!-- Strings for DrawerLayout -->
    <string-array name="categories_array">
        <item>All images</item>
        <item>Favorite</item>
    </string-array>

    <!-- Preference strings -->
    <string name="category_time">Time</string>
    <string name="turn_auto_key">auto_turning_pictures</string>
    <string name="turn_auto_title">Turning</string>
    <string name="turn_auto_summary">Automatic turning pictures</string>
    <string name="time_to_slide_key">time_to_slide</string>
    <string name="time_to_slide_title">Time</string>
    <string name="time_to_slide_summary">Time to slide pictures (sec)</string>

    <string name="category_order">Order</string>
    <string name="order_key">order</string>
    <string name="order_title">Order</string>
    <string name="order_summary">Choose order</string>
    <string name="order_def_value">show_by_ordinal_number</string>
    <string-array name="order_names">
        <item>Show by ordinal number</item>
        <item>Random</item>
    </string-array>
    <string-array name="order_values">
        <item>show_by_ordinal_number</item>
        <item>random</item>
    </string-array>

    <string name="category_anim">Animation</string>
    <string name="anim_key">anim</string>
    <string name="anim_title">Animation</string>
    <string name="anim_summary">Choose animation</string>
    <string name="anim_def_value">none_anim</string>
    <string-array name="anim_names">
        <item>None</item>
        <item>Zoom-out transform animation</item>
        <item>Depth transform animation</item>
    </string-array>
    <string-array name="anim_values">
        <item>none_anim</item>
        <item>zoom_out_anim</item>
        <item>depth_anim</item>
    </string-array>

    <!-- DrawerLayoyt strings -->
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>

    <!-- AlertDialog strings -->
    <string name="alert_comment_text">Enter comment</string>
    <string name="alert_comment_hint">Enter comment here...</string>
    <string name="alert_btn_ok_text">Ok</string>
    <string name="alert_btn_cancel_text">Cancel</string>

</resources>
